<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TheMalthusModelActivity">

    <TextView
        android:id="@+id/textViewcreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/maroon"
        android:textSize="10sp"
        android:text="@string/creator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewcreator">

        <TextView
            android:id="@+id/textView1xi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:fontFamily="@font/timesnewroman"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/xipopulationsize"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/editText1xi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:fontFamily="@font/timesnewromanitalic"
            android:textCursorDrawable="@drawable/cursor"
            android:backgroundTint="@color/maroon"
            android:hint="@string/hint0"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout1">

        <TextView
            android:id="@+id/textView2initialyear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:fontFamily="@font/timesnewroman"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/initialyear"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/editText2initialyear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:fontFamily="@font/timesnewromanitalic"
            android:textCursorDrawable="@drawable/cursor"
            android:backgroundTint="@color/maroon"
            android:hint="@string/hint0"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout2">

        <TextView
            android:id="@+id/textView3finalyear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:fontFamily="@font/timesnewroman"
            android:text="@string/finalyear"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/editText3finalyear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:fontFamily="@font/timesnewromanitalic"
            android:textCursorDrawable="@drawable/cursor"
            android:backgroundTint="@color/maroon"
            android:hint="@string/hint0"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout3">

        <TextView
            android:id="@+id/textView4r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:fontFamily="@font/timesnewroman"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/rbirthrate"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/editText4r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:fontFamily="@font/timesnewromanitalic"
            android:textCursorDrawable="@drawable/cursor"
            android:backgroundTint="@color/maroon"
            android:hint="@string/hint0"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout4">

        <TextView
            android:id="@+id/textView5m"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:fontFamily="@font/timesnewroman"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/mmortality"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/editText5m"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:fontFamily="@font/timesnewromanitalic"
            android:textCursorDrawable="@drawable/cursor"
            android:backgroundTint="@color/maroon"
            android:hint="@string/hint0"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/button1populationsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onclickpopulationsize"
        android:fontFamily="@font/timesnewroman"
        android:text="@string/populationsize"
        android:background="@drawable/redbutton"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout5">
    </Button>

    <ListView
        android:id="@+id/listView1xi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button1populationsize">
    </ListView>
</androidx.constraintlayout.widget.ConstraintLayout>